--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ security.jwt.expiration-in-ms = 864000000
 
 # We expect database called "bep2-huland-casino",
 # with the same username and password
-spring.datasource.url=jdbc:postgresql://localhost:5432/bep2-huland-casino
+spring.datasource.url=jdbc:postgresql://localhost:15432/bep2-huland-casino
 spring.datasource.username=bep2-huland-casino
 spring.datasource.password=bep2-huland-casino
 
