--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>nl.hu.bep2</groupId>
-    <artifactId>huland-casino</artifactId>
+    <artifactId>casino</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>huland-casino</name>
+    <name>bep2-huland-casino</name>
     <description>Student project for BEP2</description>
 
     <properties>
