Document some more details in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@
 
 # Change in production!
 security.jwt.secret="this-is-a-512-bit-key-used-for-signing-jwt-tokens-that-should-be-changed-production"
+
+# 864000000 ms = 10 days
 security.jwt.expiration-in-ms = 864000000
 
 # We expect database called "bep2-huland-casino",
@@ -20,5 +22,5 @@ spring.datasource.password=bep2-huland-casino
 spring.jpa.hibernate.ddl-auto=update
 
 # Configurable amount of starting chips
-# (See: UserService)
+# (See: security.UserService)
 chips.start-amount = 1000
