Update to spring boot 3
- addfilterbefore tijdelijk verwijderd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ security.jwt.expiration-in-ms = 864000000
 
 # We expect database called "bep2-huland-casino",
 # with the same username and password
-spring.datasource.url=jdbc:postgresql://localhost:15432/bep2-huland-casino
+#spring.datasource.url=jdbc:postgresql://localhost:15432/bep2-huland-casinos
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
 spring.datasource.username=bep2-huland-casino
 spring.datasource.password=bep2-huland-casino
 
