--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,12 @@ spring.jpa.hibernate.ddl-auto=update
 # Configurable amount of starting chips
 # (See: security.UserService)
 chips.start-amount = 1000
+
+# Enable jwt-logging:
+#logging.level.nl.hu.bep2.casino.security.presentation.filter=debug
+
+# Enable JPA query logging
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
